--- a/ds/css/styles.css
+++ b/ds/css/styles.css
@@ -83,7 +83,7 @@ h5{
 #mobile-nav{
 	position: fixed;
 	top: -100%;
-	z-index: 5;
+	z-index: 999;
 
 	width: 100%;
 	height: 100%;
